--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,30 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+/*
+* App Global styles
+*/
+
+ion-content {
+  --background: var(--ion-color-dark);
+}
+ 
+@font-face {
+  font-family: 'Spotify';
+  font-style: normal;
+  font-weight: normal;
+  src: url('/assets/fonts/spotify-regular.ttf');
+}
+ 
+@font-face {
+  font-family: 'Spotify';
+  font-weight: bold;
+  src: url('/assets/fonts/spotify-bold.ttf');
+}
+ 
+@font-face {
+  font-family: 'Spotify';
+  font-weight: lighter;
+  src: url('/assets/fonts/spotify-light.ttf');
+}
